--- a/forAutent.css
+++ b/forAutent.css
@@ -110,9 +110,9 @@ form {
 .btn {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #4CAF50 !important;
-    color: white !important;
-    text-decoration: none !important;
-    margin-left: 15px !important;
-    margin-right: auto !important;
+    background-color: #4CAF50;
+    color: white;
+    text-decoration: none;
+    margin-left: 15px;
+    margin-right: auto;
 }
