--- a/styleForDB.css
+++ b/styleForDB.css
@@ -100,7 +100,7 @@ th, td {
 td img {
     width: 200px;         
     height: 200px;       
-    object-fit: cover;    /* Заполнение области, сохраняя пропорции */
+    object-fit: cover;    
     transition: transform 0.3s ease;
     align-items: center;
 }
